--- a/Exercícios/ex017/fundo05.html
+++ b/Exercícios/ex017/fundo05.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personalização dos fundos</title>
+    <title>Posicionamento 2.0</title>
     <style>
         body {
-            background-image: url('imagens/pattern001.png');
-            background-size: 100px 100px;
-            background-repeat: repeat;
+            height: 97vh;
+            background-image: url('imagens/wallpaper003.jpg');
+            background-position: center center;
         }
     </style>
 </head>
