--- a/exercicios/ex017/fundo06.html
+++ b/exercicios/ex017/fundo06.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 100vh;
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center top;
-            background-repeat: no-repeat;
+            background-repeat: repeat;
             background-size: cover;
         }
 
@@ -30,6 +30,48 @@
 <body>
     <main>
         <h1>Teste de imagem fundo</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum, numquam dolorem earum autem facere,
+            reprehenderit, aperiam nemo ipsam repellendus recusandae adipisci quia error aspernatur at suscipit cum
+            ducimus omnis mollitia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore excepturi inventore
+            ratione quia repellendus dolorum, recusandae at omnis tempore nostrum praesentium explicabo, ab sed? Earum
+            dolores placeat odio laudantium dolorem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
+            dolorem recusandae, quis odio vel sequi consequatur maiores sapiente cupiditate, nihil praesentium dolore
+            voluptates hic veniam saepe adipisci qui non nobis.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum, numquam dolorem earum autem facere,
+            reprehenderit, aperiam nemo ipsam repellendus recusandae adipisci quia error aspernatur at suscipit cum
+            ducimus omnis mollitia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore excepturi inventore
+            ratione quia repellendus dolorum, recusandae at omnis tempore nostrum praesentium explicabo, ab sed? Earum
+            dolores placeat odio laudantium dolorem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
+            dolorem recusandae, quis odio vel sequi consequatur maiores sapiente cupiditate, nihil praesentium dolore
+            voluptates hic veniam saepe adipisci qui non nobis.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum, numquam dolorem earum autem facere,
+            reprehenderit, aperiam nemo ipsam repellendus recusandae adipisci quia error aspernatur at suscipit cum
+            ducimus omnis mollitia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore excepturi inventore
+            ratione quia repellendus dolorum, recusandae at omnis tempore nostrum praesentium explicabo, ab sed? Earum
+            dolores placeat odio laudantium dolorem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
+            dolorem recusandae, quis odio vel sequi consequatur maiores sapiente cupiditate, nihil praesentium dolore
+            voluptates hic veniam saepe adipisci qui non nobis.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum, numquam dolorem earum autem facere,
+            reprehenderit, aperiam nemo ipsam repellendus recusandae adipisci quia error aspernatur at suscipit cum
+            ducimus omnis mollitia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore excepturi inventore
+            ratione quia repellendus dolorum, recusandae at omnis tempore nostrum praesentium explicabo, ab sed? Earum
+            dolores placeat odio laudantium dolorem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
+            dolorem recusandae, quis odio vel sequi consequatur maiores sapiente cupiditate, nihil praesentium dolore
+            voluptates hic veniam saepe adipisci qui non nobis.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum, numquam dolorem earum autem facere,
+            reprehenderit, aperiam nemo ipsam repellendus recusandae adipisci quia error aspernatur at suscipit cum
+            ducimus omnis mollitia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore excepturi inventore
+            ratione quia repellendus dolorum, recusandae at omnis tempore nostrum praesentium explicabo, ab sed? Earum
+            dolores placeat odio laudantium dolorem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
+            dolorem recusandae, quis odio vel sequi consequatur maiores sapiente cupiditate, nihil praesentium dolore
+            voluptates hic veniam saepe adipisci qui non nobis.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum, numquam dolorem earum autem facere,
+            reprehenderit, aperiam nemo ipsam repellendus recusandae adipisci quia error aspernatur at suscipit cum
+            ducimus omnis mollitia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore excepturi inventore
+            ratione quia repellendus dolorum, recusandae at omnis tempore nostrum praesentium explicabo, ab sed? Earum
+            dolores placeat odio laudantium dolorem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
+            dolorem recusandae, quis odio vel sequi consequatur maiores sapiente cupiditate, nihil praesentium dolore
+            voluptates hic veniam saepe adipisci qui non nobis.</p>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum, numquam dolorem earum autem facere,
             reprehenderit, aperiam nemo ipsam repellendus recusandae adipisci quia error aspernatur at suscipit cum
             ducimus omnis mollitia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore excepturi inventore
