--- a/exercicios/ex018/tabela02.html
+++ b/exercicios/ex018/tabela02.html
@@ -30,7 +30,7 @@
 </head>
 
 <body>
-    <h1>Primeira Tabela!</h1>
+    <h1>Alinhando Tabela</h1>
     <!--
         Hierarquia de tabelas (simples):
         TABLE = Tabela
