--- a/exercicios/ex018/tabela02.html
+++ b/exercicios/ex018/tabela02.html
@@ -5,61 +5,285 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alinhamento de Tabelas</title>
+    <title>Tabelas Grandes</title>
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
+            background-color: green;
+        }
+
+        h1 {
+            background-color: yellow;
+            color: blue;
+            text-align: center;
+            font-weight: bold;
+            border-radius: 10px;
+            width: 600px;
+            margin: auto;
+            margin-bottom: 10px;
         }
 
         table {
-            width: 400px;
-            height: 400px;
+            background-color: white;
+            width: 500px;
             border-collapse: collapse;
+            margin: auto;
+            position: relative;
         }
 
+        caption {
+            background-color: lightgray;
+            font-weight: bold;
+            font-size: 1.5em;
+            border: 1px solid black;
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
+            padding: 10px;
+        }
+
+        thead,
+        tfoot {
+            background-color: #3d3d3d;
+            color: white;
+        }
+
+        thead>tr>th {
+            position: sticky;
+            top: -1px;
+            background-color: #3d3d3d;
+        }
+
+        tbody>tr:nth-child(2n) {
+            background-color: #969595;
+        }
+
+        th,
         td {
             border: 1px solid black;
-            text-align: center; /*Alinhamento Horizontal*/
-            vertical-align: middle; /*Alinhamento Vertical*/
+            padding: 8px;
         }
 
-        .num{
+        .num {
             text-align: right;
+        }
+
+        article {
+            background-color: white;
+            text-align: justify;
+            width: 600px;
+            margin: auto;
+            margin-top: 50px;
+            padding: 10px;
+            border: 1px solid black;
+            border-radius: 10px;
         }
     </style>
 </head>
 
 <body>
-    <h1>Alinhando Tabela</h1>
-    <!--
-        Hierarquia de tabelas (simples):
-        TABLE = Tabela
-            (<tr>) TABLE ROW = linha de tabela
-                (<th>) TABLE HEADER = cabeçalho de tabela
-                (<td>) TABLE DATA= dados de tebelas
+    <h1>Uso de tabelas grandes</h1>
+    <!-- Anatomia de tabelas grandes
+        TABLE
+            CAPTION = legenda
+            THEAD
+                TR, TD, TH
+            TBODY
+                TR, TD, TH
+            TFOOT
+                TR, TD, TH
     -->
     <table>
-        <tr>
-            <td>A1</td>
-            <td>B1</td>
-            <td>C1</td>
-        </tr>
-        <tr>
-            <td>A2</td>
-            <td class="num">B2</td>
-            <td>C2</td>
-        </tr>
-        <tr>
-            <td>A3</td>
-            <td>B3</td>
-            <td>C3</td>
-        </tr>
-        <tr>
-            <td class="num">A4</td>
-            <td>B4</td>
-            <td>C4</td>
-        </tr>
+        <caption>População das Unidades Federativas.</caption>
+        <thead>
+            <tr>
+                <th scope="col">Estado</td>
+                <th scope="col" style="width: 150px;">População</td>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>São Paulo</td>
+                <td class="num">46 649 132</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">21 411 923</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">17 463 349</td>
+            </tr>
+            <tr>
+                <td>Bahia</td>
+                <td class="num">14 985 284</td>
+            </tr>
+            <tr>
+                <td>Paraná</td>
+                <td class="num">11 597 484</td>
+            </tr>
+            <tr>
+                <td>Rio Grande do Sul</td>
+                <td class="num">11 466 630</td>
+            </tr>
+            <tr>
+                <td>Pernambuco</td>
+                <td class="num">9 674 793</td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="num">9 240 580</td>
+            </tr>
+            <tr>
+                <td>Pará</td>
+                <td class="num">8 777 124</td>
+            </tr>
+            <tr>
+                <td>Santa Catarina</td>
+                <td class="num">7 338 473</td>
+            </tr>
+            <tr>
+                <td>Goiás</td>
+                <td class="num">7 206 589</td>
+            </tr>
+            <tr>
+                <td>Maranhão</td>
+                <td class="num">7 153 262</td>
+            </tr>
+            <tr>
+                <td>Amazonas</td>
+                <td class="num">4 269 995</td>
+            </tr>
+            <tr>
+                <td>Espírito Santo</td>
+                <td class="num">4 108 508</td>
+            </tr>
+            <tr>
+                <td>Paraíba</td>
+                <td class="num">4 059 905</td>
+            </tr>
+            <tr>
+                <td>Mato Grosso</td>
+                <td class="num">3 567 234</td>
+            </tr>
+            <tr>
+                <td>Rio Grande do Norte</td>
+                <td class="num">3 560 903</td>
+            </tr>
+            <tr>
+                <td>Alagoas</td>
+                <td class="num">3 365 351</td>
+            </tr>
+            <tr>
+                <td>Piauí</td>
+                <td class="num">3 289 290</td>
+            </tr>
+            <tr>
+                <td>Distrito Federal</td>
+                <td class="num">3 094 325</td>
+            </tr>
+            <tr>
+                <td>Mato Grosso do Sul</td>
+                <td class="num">2 839 188</td>
+            </tr>
+            <tr>
+                <td>Sergipe</td>
+                <td class="num">2 338 474</td>
+            </tr>
+            <tr>
+                <td>Rondônia</td>
+                <td class="num">1 815 278</td>
+            </tr>
+            <tr>
+                <td>Tocantins</td>
+                <td class="num">1 607 363</td>
+            </tr>
+            <tr>
+                <td>Acre</td>
+                <td class="num">906 876</td>
+            </tr>
+            <tr>
+                <td>Amapá</td>
+                <td class="num">877 613</td>
+            </tr>
+            <tr>
+                <td>Roraima</td>
+                <td class="num">652 713</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <th scope="row">População Total:</th>
+            <td class="num"><strong>211.710.276</strong></td>
+        </tfoot>
     </table>
+    <article>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat, iure deleniti? Delectus consequuntur
+            nihil
+            asperiores placeat deserunt explicabo quia debitis aut voluptate labore, recusandae exercitationem repellat
+            molestias enim. Omnis, inventore?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione facere
+            consequatur tenetur mollitia aliquam eveniet consectetur velit cupiditate? Libero, perferendis eum
+            aspernatur
+            possimus delectus numquam nulla aut explicabo officia similique. Lorem, ipsum dolor sit amet consectetur
+            adipisicing elit. Pariatur reiciendis voluptatem autem est fugiat enim consectetur aut officia
+            exercitationem
+            beatae non eligendi molestias excepturi aperiam dolor, quas aspernatur corporis labore. Lorem ipsum, dolor
+            sit
+            amet consectetur adipisicing elit. Sed blanditiis minima explicabo repellendus dolore, exercitationem,
+            quibusdam
+            cum reprehenderit quidem vero ipsa reiciendis debitis porro. Blanditiis atque possimus illum sequi
+            reprehenderit!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt debitis explicabo numquam
+            et
+            eveniet repudiandae culpa excepturi praesentium blanditiis sapiente tenetur delectus dignissimos, nam
+            laborum,
+            ullam a inventore cum corporis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius nulla harum,
+            ipsum
+            aliquid ipsam totam necessitatibus in eveniet cupiditate! Eum fugit totam nesciunt! Vel unde provident,
+            voluptate sint deserunt assumenda.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat, iure deleniti? Delectus consequuntur
+            nihil
+            asperiores placeat deserunt explicabo quia debitis aut voluptate labore, recusandae exercitationem repellat
+            molestias enim. Omnis, inventore?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione facere
+            consequatur tenetur mollitia aliquam eveniet consectetur velit cupiditate? Libero, perferendis eum
+            aspernatur
+            possimus delectus numquam nulla aut explicabo officia similique. Lorem, ipsum dolor sit amet consectetur
+            adipisicing elit. Pariatur reiciendis voluptatem autem est fugiat enim consectetur aut officia
+            exercitationem
+            beatae non eligendi molestias excepturi aperiam dolor, quas aspernatur corporis labore. Lorem ipsum, dolor
+            sit
+            amet consectetur adipisicing elit. Sed blanditiis minima explicabo repellendus dolore, exercitationem,
+            quibusdam
+            cum reprehenderit quidem vero ipsa reiciendis debitis porro. Blanditiis atque possimus illum sequi
+            reprehenderit!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt debitis explicabo numquam
+            et
+            eveniet repudiandae culpa excepturi praesentium blanditiis sapiente tenetur delectus dignissimos, nam
+            laborum,
+            ullam a inventore cum corporis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius nulla harum,
+            ipsum
+            aliquid ipsam totam necessitatibus in eveniet cupiditate! Eum fugit totam nesciunt! Vel unde provident,
+            voluptate sint deserunt assumenda.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat, iure deleniti? Delectus consequuntur
+            nihil
+            asperiores placeat deserunt explicabo quia debitis aut voluptate labore, recusandae exercitationem repellat
+            molestias enim. Omnis, inventore?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione facere
+            consequatur tenetur mollitia aliquam eveniet consectetur velit cupiditate? Libero, perferendis eum
+            aspernatur
+            possimus delectus numquam nulla aut explicabo officia similique. Lorem, ipsum dolor sit amet consectetur
+            adipisicing elit. Pariatur reiciendis voluptatem autem est fugiat enim consectetur aut officia
+            exercitationem
+            beatae non eligendi molestias excepturi aperiam dolor, quas aspernatur corporis labore. Lorem ipsum, dolor
+            sit
+            amet consectetur adipisicing elit. Sed blanditiis minima explicabo repellendus dolore, exercitationem,
+            quibusdam
+            cum reprehenderit quidem vero ipsa reiciendis debitis porro. Blanditiis atque possimus illum sequi
+            reprehenderit!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt debitis explicabo numquam
+            et
+            eveniet repudiandae culpa excepturi praesentium blanditiis sapiente tenetur delectus dignissimos, nam
+            laborum,
+            ullam a inventore cum corporis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius nulla harum,
+            ipsum
+            aliquid ipsam totam necessitatibus in eveniet cupiditate! Eum fugit totam nesciunt! Vel unde provident,
+            voluptate sint deserunt assumenda.</p>
+    </article>
+
 </body>
 
 </html>
