--- a/exercicios/ex018/tabela01.html
+++ b/exercicios/ex018/tabela01.html
@@ -5,33 +5,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabelas</title>
+    <title>Alinhamento de Tabelas</title>
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
         }
 
         table {
-            width: 500px;
+            width: 400px;
+            height: 400px;
             border-collapse: collapse;
-        }
-
-        tr.linha {
-            background-color: #8b8b8b;
         }
 
         td {
             border: 1px solid black;
+            text-align: center; /*Alinhamento Horizontal*/
+            vertical-align: middle; /*Alinhamento Vertical*/
         }
 
-        td.dado {
-            background-color: #8787fa63;
+        .num{
+            text-align: right;
         }
     </style>
 </head>
 
 <body>
-    <h1>Primeira Tabela!</h1>
+    <h1>Alinhando Tabela</h1>
     <!--
         Hierarquia de tabelas (simples):
         TABLE = Tabela
@@ -45,20 +44,20 @@
             <td>B1</td>
             <td>C1</td>
         </tr>
-        <tr class="linha">
+        <tr>
             <td>A2</td>
-            <td>B2</td>
+            <td class="num">B2</td>
             <td>C2</td>
         </tr>
         <tr>
-            <td class="dado">A3</td>
+            <td>A3</td>
             <td>B3</td>
             <td>C3</td>
         </tr>
-        <tr class="linha">
-            <td>A4</td>
+        <tr>
+            <td class="num">A4</td>
             <td>B4</td>
-            <td class="dado">C4</td>
+            <td>C4</td>
         </tr>
     </table>
 </body>
