--- a/desafios/d013/tabelas.html
+++ b/desafios/d013/tabelas.html
@@ -33,7 +33,7 @@
 <body>
     <div id="um">
         <table>
-            <option>Tabela 01</option>
+            <caption>Tabela 01</caption>
             <tr>
                 <td>1</td>
                 <td>2</td>
@@ -63,7 +63,7 @@
     </div>
     <div id="dois">
         <table>
-            <option>Tabela 02</option>
+            <caption>Tabela 02</caption>
             <tr>
                 <td colspan="4">A</td>
                 <td rowspan="4">B</td>
