--- a/exercicios/ex021/mq01/index.html
+++ b/exercicios/ex021/mq01/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <h1>Jornal Tchuco Tchuco</h1>
+        <h1>Jornal Tchuco Tchuco <br> ☆ </h1>
         <menu>
             <ul>
                 <li>Início</li>
