--- a/exercicios/ex021/mq04/index.html
+++ b/exercicios/ex021/mq04/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="estyles/style.css">
-    <link rel="stylesheet" href="estilos/media-query.css">
+    <link rel="stylesheet" href="estyles/media-query.css">
 </head>
 
 <body onresize="mudouTamanho()">
